--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "safe-buffer": "5.1.1"
   },
   "devDependencies": {
+    "@types/mocha": "^2.2.44",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.7.0",
